syntax = "proto3";

option csharp_namespace = "Orchard.Grpc";

package orders;

service Orders {
  rpc SubmitOrder(OrderRequest) returns (OrderResponse);
  rpc CheckOrderStatus(CheckOrderRequest) returns (CheckOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
  rpc GetOrdersForUser(UserOrdersRequest) returns (UserOrdersResponse);
  rpc GetMoreOrderInfo(MoreOrderDetailsRequest) returns (MoreOrderDetailsResponse);
}

enum OrderStatus {
    Unsubmitted = 0;
    Submitted = 1;
    Confirmed = 2;
    Cancelled = 3;
    Completed = 4;
    Shipped = 5;
    Delayed = 6;
    ReturnRequested = 7;
    Returned = 8;
}

message BasketFruit {
  int32 FruitId = 1;
  int32 Amount = 2;
  int32 BasketId = 3;
  string Name = 4;
}

message OrderRequest {
  optional int32 UserId = 1;
  repeated BasketFruit Fruit = 2;
}

message OrderResponse {
  int32 Id = 1;
  OrderStatus OrderStatus = 2;
}

message CheckOrderRequest {
  int32 Id = 1;
  int32 UserId = 2;
}

message CheckOrderResponse {
  int32 Id = 1;
  OrderStatus OrderStatus = 2;
}

message CancelOrderRequest {
  int32 OrderId = 1;
  int32 UserId = 2;
}

message CancelOrderResponse {
  bool IsCancelled = 1;
}

message UserOrdersRequest {
  int32 UserId = 1;
}

message UserOrdersResponse {
  message Order
  {
    int32 Id = 1;
    OrderStatus Status = 2;
    int32 AmountOfFruit = 3;
  }
  repeated Order Orders = 1;
}

message MoreOrderDetailsRequest {
  int32 Id = 1;
  int32 UserId = 2;
}

message MoreOrderDetailsResponse {
  repeated BasketFruit Fruit = 1;
}